fix text being cut off when downloading pdf file

--- a/src/styles/work-experience.css
+++ b/src/styles/work-experience.css
@@ -4,6 +4,7 @@
   flex-direction: column;
   gap: 0.35rem;
   padding: 0.75rem;
+  padding-bottom: 0;
 }
 
 .bold {
